--- a/src/main/resources/META-INF/resources/busdoc/fpbusdoc.xhtml
+++ b/src/main/resources/META-INF/resources/busdoc/fpbusdoc.xhtml
@@ -616,7 +616,7 @@
                     </p:dataTable>
                 </p:panel>
                 <p:spacer height="5px" width="1px"/>
-                <p:panel header="Sales" toggleable="true">
+                <p:panel header="Sales History" toggleable="true">
                     <p:dataTable id="saleslist"
                                  value="#{foreignPurchaseController.salesProductTransactions}"
                                  style="width: 100%"
@@ -635,7 +635,7 @@
                     </p:dataTable>
                 </p:panel>
                 <p:spacer height="5px" width="1px"/>
-                <p:panel header="Purchase" toggleable="true">
+                <p:panel header="Purchase History" toggleable="true">
                     <p:dataTable id="purchaselist"
                                  value="#{foreignPurchaseController.purchaseProductTransactions}"
                                  var="trans"
