--- a/src/main/resources/META-INF/resources/diamond-layout/template_busdoc.xhtml
+++ b/src/main/resources/META-INF/resources/diamond-layout/template_busdoc.xhtml
@@ -21,7 +21,7 @@
         <ui:insert name="head"/>
     </h:head>
 
-    <h:body>
+    <h:body style="font-size: smaller">
         <p:ajaxStatus styleClass="layout-ajax-loader">
             <f:facet name="start">
                 <i class="pi pi-spin pi-spinner layout-ajax-loader-icon" aria-hidden="true"></i>
